Fixed the alignment for next/prev

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ a:hover {
 
 #nextprevcont{
    position: relative;
-   width: 35%;
+   width: 30%;
    text-align: right;
 }
 
